--- a/app/src/main/res/layout/activity_decomisos_info.xml
+++ b/app/src/main/res/layout/activity_decomisos_info.xml
@@ -33,7 +33,7 @@ android:orientation="vertical">
             android:layout_weight="1"
             android:fontFamily="@font/poppins_semibold"
             android:gravity="center_vertical"
-            android:text="Infractores"
+            android:text="Decomisos"
             android:textColor="#000000"
             android:textSize="16sp" />
 
