--- a/app/src/main/res/layout/card_registro_usuario_referencia.xml
+++ b/app/src/main/res/layout/card_registro_usuario_referencia.xml
@@ -11,7 +11,8 @@
         android:background="@drawable/rounded_corners_all"
         android:backgroundTint="#FFFFFF"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_editor_absoluteX="8dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +63,8 @@
                     android:text="TextView"
                     android:textAlignment="textEnd"
                     android:textColor="#8E8E8E"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="RtlCompat" />
 
             </LinearLayout>
         </LinearLayout>
