--- a/app/src/main/res/layout/activity_denuncias_agregar.xml
+++ b/app/src/main/res/layout/activity_denuncias_agregar.xml
@@ -34,7 +34,7 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/poppins_semibold"
                 android:gravity="center_vertical"
-                android:text="Infractores"
+                android:text="Denuncias"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
@@ -84,6 +84,40 @@
                     android:ems="10"
                     android:fontFamily="@font/poppins_medium"
                     android:hint="DUI"
+                    android:inputType="textPersonName"
+                    android:maxLength="50"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#8E8E8E"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/Denuncias_agregar_txtNombre_Denunciante"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/rounded_corners_all"
+                    android:ems="10"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Nombre"
+                    android:inputType="textPersonName"
+                    android:maxLength="50"
+                    android:paddingHorizontal="20dp"
+                    android:paddingVertical="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#8E8E8E"
+                    android:textSize="16sp" />
+
+                <EditText
+                    android:id="@+id/Denuncias_agregar_txtApellido_Denunciante"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:background="@drawable/rounded_corners_all"
+                    android:ems="10"
+                    android:fontFamily="@font/poppins_medium"
+                    android:hint="Apellido"
                     android:inputType="textPersonName"
                     android:maxLength="50"
                     android:paddingHorizontal="20dp"
