--- a/app/src/main/res/layout/activity_denuncias_main.xml
+++ b/app/src/main/res/layout/activity_denuncias_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical"
     tools:context=".Denuncias_main">
 
@@ -83,7 +84,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:paddingBottom="10dp">
 
