--- a/app/src/main/res/layout/activity_recuperacion_credenciales_mail_verificacion.xml
+++ b/app/src/main/res/layout/activity_recuperacion_credenciales_mail_verificacion.xml
@@ -7,7 +7,7 @@
     tools:context=".RecuperacionCredencialesMailVerificacion">
 
     <Button
-        android:id="@+id/btnVerificarCorreo"
+        android:id="@+id/btnCorreoVerifcar"
         android:layout_width="334dp"
         android:layout_height="55dp"
         android:background="@drawable/rounded_corners_all"
@@ -24,7 +24,7 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.948" />
+        app:layout_constraintVertical_bias="0.954" />
 
     <TextView
         android:id="@+id/textView16"
