--- a/app/src/main/res/layout/card_registro_usuario_referencia.xml
+++ b/app/src/main/res/layout/card_registro_usuario_referencia.xml
@@ -1,125 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:id="@+id/card_referencia_personal_ly"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corners_all"
-        android:backgroundTint="#FFFFFF"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
+            android:id="@+id/card_referencia_personal_ly"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_corners_all"
+            android:backgroundTint="#FFFFFF"
             android:orientation="vertical"
-            android:padding="10dp">
-
-            <TextView
-                android:id="@+id/RegistroUsuarioCardReferenciaTxtNombre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
-                android:gravity="center_vertical"
-                android:text="TextView"
-                android:textColor="#313131"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/RegistroUsuarioCardReferenciaTxtCorreo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="TextView"
-                android:textColor="#8E8E8E"
-                android:textSize="16sp" />
+            tools:ignore="MissingConstraints">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
-                    android:id="@+id/RegistroUsuarioCardReferenciaTxtTelefono"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/RegistroUsuarioCardReferenciaTxtNombre"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:fontFamily="@font/poppins_medium"
+                    android:gravity="center_vertical"
+                    android:text="TextView"
+                    android:textColor="#313131"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/RegistroUsuarioCardReferenciaTxtCorreo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:text="TextView"
                     android:textColor="#8E8E8E"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/RegistroUsuarioCardReferenciaTxtDUI"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/RegistroUsuarioCardReferenciaTxtTelefono"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="TextView"
+                        android:textColor="#8E8E8E"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/RegistroUsuarioCardReferenciaTxtDUI"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:text="TextView"
+                        android:textAlignment="textEnd"
+                        android:textColor="#8E8E8E"
+                        android:textSize="16sp"
+                        tools:ignore="RtlCompat" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:id="@+id/RegistroUsuarioCardReferenciaBtnEditar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="TextView"
-                    android:textAlignment="textEnd"
-                    android:textColor="#8E8E8E"
-                    android:textSize="16sp"
-                    tools:ignore="RtlCompat" />
-
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:id="@+id/RegistroUsuarioCardReferenciaBtnEditar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/rounded_corners_bottom_left"
-                android:backgroundTint="#3D96FF"
-                android:gravity="center"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textView23"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins"
+                    android:background="@drawable/rounded_corners_bottom_left"
+                    android:backgroundTint="#3D96FF"
                     android:gravity="center"
-                    android:text="Editar"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/RegistroUsuarioCardReferenciaBtnEliminar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/rounded_corners_bottom_right"
-                android:backgroundTint="#FF6363"
-                android:gravity="center"
-                android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textView23"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins"
+                        android:gravity="center"
+                        android:text="Editar"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView22"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins"
+                <LinearLayout
+                    android:id="@+id/RegistroUsuarioCardReferenciaBtnEliminar"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/rounded_corners_bottom_right"
+                    android:backgroundTint="#FF6363"
                     android:gravity="center"
-                    android:text="Eliminar"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp"
-                    android:textStyle="bold" />
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView22"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/poppins"
+                        android:gravity="center"
+                        android:text="Eliminar"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
-
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
